profile pic and background changes

--- a/style.css
+++ b/style.css
@@ -15,9 +15,11 @@
   padding: 10px;
 }
 
-#car {
+#profilePic {
   margin-right: 20px;
   margin-bottom: 20px;
+  height: 250px;
+  width: 250px;
 }
 
 .navbar-brand {
