--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@
   padding: 10px;
 }
 
-#profilePic {
+#Profile_Pic {
   margin-right: 20px;
   margin-bottom: 20px;
-  height: 250px;
   width: 250px;
+  height: 250px;
 }
 
 .navbar-brand {
